--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:id="@+id/list1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#91BDBD"
+            android:background="#AEE1E1"
             />
     </LinearLayout>
     <LinearLayout
