Edit activity_main.xml (SeekBar) Commit

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,16 +29,19 @@
             android:id="@+id/btn_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/btn_start"/>
         <Button
             android:id="@+id/btn_pause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/btn_pause" />
         <Button
             android:id="@+id/btn_stop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/btn_stop"/>
 
     </LinearLayout>
@@ -53,11 +56,10 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:text="@string/text_music"/>
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="wrap_content"
+        <SeekBar
+            android:id="@+id/seek1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
             />
     </LinearLayout>
 
